# cyber_teams_niuma

./: .gitignore  config.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-03-19-niuma-bot.md
docs/superpowers/specs/: 2026-03-19-niuma-bot-design.md
scripts/: check-and-restart.sh  install-skills.sh  reset.sh  start.sh
skills/ai-pim-utils-guide/: SKILL.md
skills/authenticating-entra-device-code/: SKILL.md
skills/managing-teams/: SKILL.md
src/niuma/: __init__.py  config.py  db.py  dispatcher.py  handler.py  main.py  manager.py  poller.py  responder.py  scanner.py  session.py  teams_api.py  watcher.py
tests/: conftest.py  test_config.py  test_db.py  test_dispatcher.py  test_handler.py  test_responder.py  test_session.py
